1.2/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-svc
spec:
  type: NodePort
  selector:
    app: todoapp
  ports:
  - name: http
    nodePort: 30080
    protocol: TCP
    port: 1234
    targetPort: 3000
